# FD_Eval

./: README.md
SFD/: README.md  sfd_detector.py  test.py
face-eval/: getColorLabel.py
face-eval/detections/AFW/: SFD_afw.txt
face-eval/detections/PASCAL/: SFD_pascal.txt
mtcnn/: README.md
mtcnn/detections/AFW/: mtcnn_afw_dets.txt
mtcnn/src/: main.cpp
ssd-opencv/: CMakeLists.txt  README.md  resnet_ssd_face.cpp
ssd-opencv/detections/AFW/: opencvssd_afw_dets.txt
